homeworks/mykhailo_pinchuk/module-02/lesson-08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - course-app.127.0.0.1.sslip.io
      secretName: course-app-tls
  rules:
    - host: course-app.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-service
                port:
                  number: 80
